kubernetes/apps/kube-system/cilium/netpols/allow-egress-authentik.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-authentik
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/sso: allow
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/name: authentik
            app.kubernetes.io/component: server
            io.kubernetes.pod.namespace: authentik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
      toPorts:
        - ports:
            - port: "10443"
              protocol: TCP
          serverNames:
            - auth.piscio.net
