kubernetes/apps/kube-system/cilium/netpols/allow-egress-envoy-internal.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-envoy-internal
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/envoy-internal: allow
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-namespace: network
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "10080"
              protocol: TCP
            - port: "10443"
              protocol: TCP
