kubernetes/apps/kube-system/cilium/netpols/allow-egress-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-gateway
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/gateway-route: allow
  egress:
    - toEndpoints:
        - matchExpressions:
            - key: reserved:ingress
              operator: Exists
