kubernetes/apps/kube-system/cilium/netpols/allow-egress-synology.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-synology
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/synology: allow
  egress:
    # TODO: Figure out why this one doesn't work
    - toFQDNs:
        - matchName: piscionas.piscio.net
    - toCIDRSet:
        - cidr: 192.168.32.201/32
