kubernetes/apps/kube-system/cilium/netpols/allow-ingress-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-gateway
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/gateway-route: allow
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: reserved:ingress
              operator: Exists
